@@ -28,6 +28,7 @@
 
 #include "totem-python-plugin.h"
 #include "totem-plugin.h"
+#include "debug.h"
 
 #include <pygobject.h>
 #include <string.h>
@@ -197,7 +198,7 @@ totem_python_object_init (TotemPythonObject *object)
 
 	state = pyg_gil_state_ensure();
 
-	g_debug ("Creating Python plugin instance");
+	D("Creating Python plugin instance");
 
 	class = (TotemPythonObjectClass*) (((GTypeInstance*) object)->g_class);
 
@@ -211,7 +212,7 @@ totem_python_object_init (TotemPythonObject *object)
 static void
 totem_python_object_finalize (GObject *object)
 {
-	g_debug ("Finalizing Python plugin instance");
+	D("Finalizing Python plugin instance");
 
 	if (((TotemPythonObject *) object)->instance) {
 		Py_DECREF (((TotemPythonObject *) object)->instance);
@@ -267,7 +268,7 @@ totem_python_object_get_type (GTypeModule *module,
 	type_name = g_strdup_printf ("%s+TotemPythonPlugin",
 				     PyString_AsString (PyObject_GetAttrString (type, "__name__")));
 
-	g_debug ("Registering Python plugin instance: %s", type_name);
+	D("Registering Python plugin instance: %s", type_name);
 	gtype = g_type_module_register_type (module,
 					     TOTEM_TYPE_PLUGIN,
 					     type_name,
